Fix text align

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -161,6 +161,7 @@ p {
   .post-card{
     width: 90%;
     justify-content: center;
+    text-align: left;
 
     margin: 10px 0;
   }
@@ -171,7 +172,7 @@ p {
 
   //ngClass stuff
   .expanded{
-    
+
   }
   
   .not-expanded{
